# Emergency-Backup

./: .gitignore  Cargo.toml  README.md  README_background.md  cpu_usage_log.txt  linux_build_release.sh  macos_build_release.sh  output.csv  windows_build_release.bat
release/linux/: Group-35  main  uninstall
release/macos/: Group-35  main  uninstall
release/macos-arm/: Group-35  main  uninstall
release/macos-intel/: Group-35  main  uninstall
src/: backup.rs  beep.rs  countdownGui.rs  countdown_gui.rs  gui.rs  log.rs  main.rs  mainBackground.rs  shapeRecognize.rs  shape_recognize.rs  uninstallBackground.rs  uninstall_background.rs
src/model/: Countdown.rs  MouseState.rs  countdown.rs  menuGui.rs  menu_gui.rs  mod.rs  path_base.rs
