[package]
name = "progettoRust"
version = "0.1.0"
edition = "2021"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdev = "0.5.3"
winit = "0.28"
sysinfo = "0.24.2"
walkdir = "2.3.2"
crossbeam-channel = "0.5.13"
auto-launch = "0.5.0"
